syntax = "proto3";
package gatehouse;

import "common.proto";
import "entities.proto";
import "targets.proto";

/** The main Gatehouse server */
service Gatehouse {
    // add a new target 
    rpc AddTarget (targets.AddTargetRequest) returns (targets.TargetResponse);

    // modify an existing target
    rpc ModifyTarget (targets.ModifyTargetRequest) returns (targets.TargetResponse);

    // remove an existing target
    rpc RemoveTarget(targets.RemoveTargetRequest) returns (targets.TargetResponse);

    // get all existing targets
    rpc GetTargets(targets.GetAllTargetsRequest) returns (targets.MultiTargetResponse);

    // add a new entity
    rpc AddEntity (entities.AddEntityRequest) returns (entities.EntityResponse);

    // modify an existing entity
    rpc ModifyEntity (entities.ModifyEntityRequest) returns (entities.EntityResponse);

    // remove an existing entity
    rpc RemoveEntity (entities.RemoveEntityRequest) returns (entities.EntityResponse);

    // get all entities (or filter)
    rpc GetEntities (entities.GetAllEntitiesRequest) returns (entities.MultiEntityResponse);
}